src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__About_Us__c</fullName>
        <description>Manually populated field used to describe the Account.</description>
        <inlineHelpText>Area for general information about the Account.</inlineHelpText>
        <label>About Us</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Date__c</fullName>
        <description>Manually populated date indicating when the Account was acquired.</description>
        <inlineHelpText>Date indicating when the Account was acquired.</inlineHelpText>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Source__c</fullName>
        <description>Manually populated field indicating the Channel used to acquire this Account.</description>
        <inlineHelpText>Channel used to acquire this Account.</inlineHelpText>
        <label>Acquired Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated field indicating is this account active?</description>
        <inlineHelpText>Is this account active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account acting as the Agency for this Account.</description>
        <inlineHelpText>Link to the Account acting as the Agency for this Account.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Category__c</fullName>
        <description>Manually populated field indicating the type of Organization.</description>
        <inlineHelpText>Indicates the type of Organization.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__External_ID__c</fullName>
        <description>External System or Legacy ID	Externaal System or Legacy ID</description>
        <inlineHelpText>External System or Legacy ID	Externaal System or Legacy ID</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Funding_Area__c</fullName>
        <description>Funding focus area for organization.</description>
        <inlineHelpText>Funding focus area for organization.</inlineHelpText>
        <label>Funding Area</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Billing is checked on the Account Address record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Address object) when Preferred Billing is checked on the Account Address record.</inlineHelpText>
        <label>Preferred Billing Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Billing Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Billing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Demographic_Profile__c</fullName>
        <description>Formula Field providing gender, age range and ethnicity of Preferred Contact.</description>
        <formula>BLANKVALUE(rC_Bios__Preferred_Contact__r.rC_Bios__Demographic_Profile__c, &apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gender, age range and ethnicity of Preferred Contact	.</inlineHelpText>
        <label>Preferred Contact Demographic Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Email__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Email.</description>
        <formula>rC_Bios__Preferred_Contact__r.Email</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Email.</inlineHelpText>
        <label>Preferred Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Phone__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Phone #.</description>
        <formula>rC_Bios__Preferred_Contact__r.Phone</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Phone #.</inlineHelpText>
        <label>Preferred Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to Contact) when Preferred Contact is checked on the Contact record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Contact object) when Preferred Contact is checked on the Contact record.</inlineHelpText>
        <label>Preferred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Preferred Contact)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Shipping is checked on the Account_ManageContacts VF page.</description>
        <inlineHelpText>Indicates the preferred shipping address.</inlineHelpText>
        <label>Preferred Shipping Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Shipping Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Shipping_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Recover_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with roundData to recover all data associated with account. If this is set to True, roundData will push all archived data (any archive enabled object) back into roundCause within a few hours, the assumption being that these records do not meet current archival settings.</description>
        <inlineHelpText>Set to &quot;True&quot; to recover all archived data for this account.</inlineHelpText>
        <label>Recover?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Addresses__c</fullName>
        <description>Automatically populated via auto rollup, this field contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</description>
        <inlineHelpText>Contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</inlineHelpText>
        <label>Rollup Addresses</label>
        <summarizedField>rC_Bios__Account_Address__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>rC_Bios__Account_Address__c.rC_Bios__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Salutation__c</fullName>
        <description>Salutation created by Preferred and Secondary Contact Name aggregation or by Preferred Salutation.</description>
        <inlineHelpText>Primary Salutation for the Account.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Warning_Comments__c</fullName>
        <description>Critical alerts or information that needs high visibility.</description>
        <inlineHelpText>Critical alerts or information that needs high visibility.</inlineHelpText>
        <label>Warning Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Amount__c</fullName>
        <label>Current Calendar Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Count__c</fullName>
        <label>Current Calendar Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Account where Hard Credits were received for the current member year.</description>
        <inlineHelpText>Dollar value of gifts on Account where Hard Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Hard Credits were received for the current member year.</description>
        <inlineHelpText>Number of gifts on Account where Hard Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account has a Major Gift for the current calendar year starting January 1.</description>
        <inlineHelpText>Account has a Major Gift for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account has a Sustaining Gift for the current calendar year starting January 1.</description>
        <inlineHelpText>Account has a Sustaining Gift for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Amount__c</fullName>
        <description>It&apos;s the credit amount calculated based on Dollar value of gifts and distribution % the organization decides to give. It is calculated based on the Gifts which were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on Account where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Soft Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on Account where Soft Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Deduct_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deduct value of Items from Giving Amount for match?</description>
        <inlineHelpText>Deduct value of Items from Giving Amount for match?</inlineHelpText>
        <label>Deduct Items?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Distribution_Frequency__c</fullName>
        <description>Frequency with which the organization gives for matching gifts.</description>
        <inlineHelpText>Frequency with which the organization gives for matching gifts.</inlineHelpText>
        <label>Distribution Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Amount__c</fullName>
        <description>Amount of first Hard Credit received on Account.</description>
        <inlineHelpText>Amount of first Hard Credit received on Account.</inlineHelpText>
        <label>First Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Hard_Credit_Date__c</fullName>
        <description>Date first Hard Credit received on Account.</description>
        <inlineHelpText>Date first Hard Credit received on Account.</inlineHelpText>
        <label>First Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Amount__c</fullName>
        <description>Amount of first Soft Credit received on Account.</description>
        <inlineHelpText>Amount of first Soft Credit received on Account.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Soft_Credit_Date__c</fullName>
        <description>Date first Soft Credit received on Account.</description>
        <inlineHelpText>Date first Soft Credit received on Account.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Installments_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Installment pledges allowed for matching?</description>
        <inlineHelpText>Installment pledges allowed for matching?</inlineHelpText>
        <label>Installments Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by trigger, indicates Account is a Sustaining Giver.</description>
        <label>Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Items_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Items allowed on matching pledges?</description>
        <inlineHelpText>Items allowed on matching pledges?</inlineHelpText>
        <label>Items Allowed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Amount__c</fullName>
        <description>Amount of largest Hard Credit received on Account.</description>
        <inlineHelpText>Amount of largest Hard Credit received on Account.</inlineHelpText>
        <label>Largest Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Hard_Credit_Date__c</fullName>
        <description>Date largest Hard Credit received on Account.</description>
        <inlineHelpText>Date largest Hard Credit received on Account.</inlineHelpText>
        <label>Largest Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Amount__c</fullName>
        <description>Amount of largest Soft Credit received on Account.</description>
        <inlineHelpText>Amount of largest Soft Credit received on Account.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Soft_Credit_Date__c</fullName>
        <description>Date largest Soft Credit received on Account.</description>
        <inlineHelpText>Date largest Soft Credit received on Account.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Amount__c</fullName>
        <description>Amount of last Hard Credit received on Account.</description>
        <inlineHelpText>Amount of last Hard Credit received on Account.</inlineHelpText>
        <label>Last Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Hard_Credit_Date__c</fullName>
        <description>Date last Hard Credit received on Account.</description>
        <inlineHelpText>Date last Hard Credit received on Account.</inlineHelpText>
        <label>Last Hard Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Amount__c</fullName>
        <description>Amount of last Soft Credit received on Account.</description>
        <inlineHelpText>Amount of last Soft Credit received on Account.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Soft_Credit_Date__c</fullName>
        <description>Date last Soft Credit received on Account.</description>
        <inlineHelpText>Date last Soft Credit received on Account.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Amount__c</fullName>
        <description>Total dollar value of Hard Credits this Account has received.</description>
        <inlineHelpText>Total dollar value of Hard Credits this Account has received.</inlineHelpText>
        <label>Lifetime Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Hard_Credit_Count__c</fullName>
        <description>Total number of gifts where this Account has received Hard Credits.</description>
        <inlineHelpText>Total number of gifts where this Account has received Hard Credits.</inlineHelpText>
        <label>Lifetime Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is a current Major Giver or was a Major Giver in the past. This field is automatically checked when a major gift comes in and will never be automatically unchecked.</description>
        <inlineHelpText>Account is a current Major Giver or was a Major Giver in the past. This field is automatically checked when a major gift comes in and will never be automatically unchecked.</inlineHelpText>
        <label>Lifetime Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is a current Sustaining Giver or was a Sustaining Giver in the past. This field is automatically checked when a sustaining gift comes in and will never be automatically unchecked.</description>
        <inlineHelpText>Account is a current Sustaining Giver or was a Sustaining Giver in the past. This field is automatically checked when a sustaining gift comes in and will never be automatically unchecked.</inlineHelpText>
        <label>Lifetime Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Amount__c</fullName>
        <description>Soft Credit Amount is the credit amount calculated based on dollar value of gifts and distribution % the organization decides to give. Its the total value of Soft Credits this Account has received.</description>
        <inlineHelpText>Total dollar value of Soft Credits this Account has received.</inlineHelpText>
        <label>Lifetime Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Soft_Credit_Count__c</fullName>
        <description>Total number of gifts where this Account has received Soft Credits.</description>
        <inlineHelpText>Total number of gifts where this Account has received Soft Credits.</inlineHelpText>
        <label>Lifetime Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Match_Ratio__c</fullName>
        <description>Percentage at which the organization will match associated gifts.</description>
        <inlineHelpText>Percentage at which the organization will match associated gifts.</inlineHelpText>
        <label>Match Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Maximum_Contribution__c</fullName>
        <description>Most the organization will match across aggregate of associated gifts.</description>
        <inlineHelpText>Most the organization will match across aggregate of associated gifts.</inlineHelpText>
        <label>Maximum Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Maximum_Matched__c</fullName>
        <description>Maximum amount the organization will match per individual.</description>
        <inlineHelpText>Maximum amount the organization will match per individual.</inlineHelpText>
        <label>Maximum Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Minimum_Matched__c</fullName>
        <description>Minimum amount threshold for matching per individual.</description>
        <inlineHelpText>Minimum amount threshold for matching per individual.</inlineHelpText>
        <label>Minimum Matched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pending_Payment_Details__c</fullName>
        <description>Manually populated notes or comments about a pending payment.</description>
        <inlineHelpText>Manually populated notes or comments about a pending payment.</inlineHelpText>
        <label>Pending Payment Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Pending_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated field indicating when an organization or giving-level is set to Active Only On Payment, and at least one pledge has been made but no payments have been received, this field will be checked.</description>
        <inlineHelpText>When an organization or giving-level is set to Active Only On Payment, and at least one pledge has been made but no payments have been received, this field will be checked.</inlineHelpText>
        <label>Pending Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Affiliation__c</fullName>
        <description>Automatically populated field indicating the Account&apos;s primary Affiliation.It is populated based on the custom setting defined in opportunity</description>
        <label>Primary Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Giving_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically Populated, Lookup to Primary Giving Level for this Account.</description>
        <label>Primary Giving Level</label>
        <referenceTo>rC_Giving__Giving_Level__c</referenceTo>
        <relationshipLabel>Accounts (Primary Giving Level)</relationshipLabel>
        <relationshipName>Accounts_Primary_Giving_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Expiration_Date__c</fullName>
        <description>Automatically populated field indicating the Expiration date for the Primary memberdship on the Account.</description>
        <label>Primary Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Primary_Membership_Status__c</fullName>
        <description>Automatically populated field indicating the Status for the Primary membership on the Account.</description>
        <label>Primary Membership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Calendar_Year_Hard_Credit_Amount__c</fullName>
        <label>Prior Calendar Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Calendar_Year_Hard_Credit_Count__c</fullName>
        <label>Prior Calendar Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Account where Hard Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Account where Hard Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Hard_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Hard Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Account where Hard Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account had a Major Gift during the immediately prior calendar year.</description>
        <inlineHelpText>Account had a Major Gift during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account had a Sustaining Gift during the immediately prior calendar year.</description>
        <inlineHelpText>Account had a Sustaining Gift during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on Account where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on Account where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Soft_Credit_Count__c</fullName>
        <description>Number of gifts on Account where Soft Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on Account where Soft Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Soft Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Recalculate_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag needs to be true for the Recalculate Giving Batch job to process the record.</description>
        <label>Recalculate Giving?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>